# e-nabiz-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: guvenlik-denetcisi.md
.claude/commands/: kesfet.md  surum.md  yeni-parser.md  yeni-tool.md
.github/workflows/: publish-image.yml  publish-pypi.yml
docs/: STATUS.md  privacy.md
docs/findings/: auth-flow.md  data-models.md  discovery-report.md  endpoints.md  mhrs-discovery-report.md  mhrs.md
docs/notes/: decisions.md
scripts/: capture_faz3b.py  discover.py  discover_mhrs.py
src/enabiz_mcp/: __init__.py  _text.py  auth.py  client.py  config.py  discovery.py  downloads.py  (+2 more)
tests/: conftest.py  test_allergies.py  test_appointments.py  test_auth.py  test_capture_faz3b.py  test_chronic_followups.py  test_client.py  test_config.py  test_device_prescriptions.py  test_diagnoses.py  test_discharge_summaries.py  test_discover.py  test_discover_mhrs_scan.py  test_discover_scan.py  test_download.py  test_downloads.py  test_drug_usage.py  test_emergency_notes.py  test_health_summary.py  test_hospital_visits.py  test_insurance.py  test_lab_trend.py  test_materials_devices.py  test_medications.py  test_mhrs_auth.py  test_mhrs_booking.py  test_mhrs_discovery.py  test_mhrs_requests.py  test_mhrs_tools.py  test_no_cardinality.py  test_no_secrets.py  test_optical_prescriptions.py  test_parser_robustness.py  test_parsers.py  test_parsers_empty.py  test_pathology.py  test_prescriptions.py  test_profile.py  test_radiology.py  test_radiology_image_link.py  (+9 more)
(+66 files in other folders)
